# os3-chat

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.sqlx/: query-10f3403f2a5d666823f07eefacaffba633a631f426252e9d29ab46e647e151ca.json  query-15e9dd8c5845e5b898bc0d5d0a7f5d859334b2881c6108367cf7545d4d746f73.json  query-3f5fb7db22de27618fafd2ddc10f4b13b88494877f2be06eb465e70761ae34e3.json  query-5ec22e759c41ec08cd72910dbcf512f18bcb56f8f965efbd7da3c24332ea8323.json  query-7674b683a48a596d9d2aa5d9b238831035e691d143cdc0a0591fae73947cf089.json  query-7811c0a54f8c738c4b99065265d45a9a75a9f4f407b808a4440fc3c7247b4baf.json  query-783745a92bc3460a76cf64938e539672623808796947f0255aa604a767ebbaf2.json  query-7a458141d5710f3834b47d4009ca8fcbe9d610e68484f791057fd9f56ea48547.json  query-7a6ef8a1a1dd916a01517f8d4d2e284878b51065bd27f284d701ccb2f6c1c958.json  query-7b2673d341f6b5e7c3396ca609cd0ef5e74019a4a27a5cc3feaecdf47eab6e47.json  query-7b3949149173ca3c45650a18dfcb84ee0d1fa43485d2eb49f1958ca8a6f987ba.json  query-7e4a931a467563d0002613f44d92cc6eeaa5c2a535cd0df056f8ffb647722caa.json  query-92f747d586e9002df33dfb11830a4bdaec63139b953940ff9cb61a69c3805123.json  query-b86fad61fba4f22d25aa98d9e48cabe8aef263a240613bb3f4325279798a4277.json  query-f4c919a8476f2ec62903db9d282e52c1cda2010eb9d04f5dd6c25a4118057037.json  query-fbe12269cb8bc358190db61ae0604b8aa2eee964fa25e405ed4dd88cc9a6fbc3.json
database/migrations/: 20250502141836_add_session_expired_flag.sql  20250502150343_add_rooms_and_messages.sql  20250502150542_add_room_membership.sql  20250502154843_add_public_room.sql  20250502203525_add_file_uploads.sql  20250502220318_spawn_message_on_file_upload.sql  20250506142023_single_migration.sql
migrations/: 20250501153613_accounts_and_sessions.sql  20250501153613_users_and_sessions.sql
src/: endpoints.rs  error_layer.rs  layers.rs  lib.rs  main.rs  models.rs  state.rs
src/auth/: mod.rs
src/endpoints/: account.rs  chat.rs  mod.rs  rooms.rs  upload.rs
src/repository/: account.rs  message.rs  mod.rs  room.rs  upload.rs
templates/: account.html  chat.html
