[package]
name = "os3-chat"
version = "0.1.0"
edition = "2024"
description = "Server-side HTML chat service with file uploads"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
color-eyre = "0.6.3"
futures = "0.3.31"
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
