[package]
name = "os3-chat"
version = "0.1.0"
edition = "2024"
description = "Server-side HTML chat service with file uploads"

[[bin]]
name = "os3_chat_server"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-valid = "0.23.0"
chrono = { version = "0.4.41", features = ["now", "serde"] }
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.31"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "chrono",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
